<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<RadioGroup
		android:id="@+id/group"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<RadioButton
			android:id="@+id/butn_all"
			android:checked="true"
			style="@style/HomeRadioButton"
			android:text="@string/status_bar_all" />
		<ImageView
			android:layout_width="1px"
			android:layout_height="match_parent"
			android:layout_marginTop="10dip"
			android:layout_marginBottom="10dip"
			android:background="@color/gray_dd" />
		<RadioButton
			android:id="@+id/butn_done"
			style="@style/HomeRadioButton"
			android:text="@string/status_bar_done" />
		<ImageView
			android:layout_width="1px"
			android:layout_height="match_parent"
			android:layout_marginTop="10dip"
			android:layout_marginBottom="10dip"
			android:background="@color/gray_dd" />
		<RadioButton
			android:id="@+id/butn_no_done"
			style="@style/HomeRadioButton"
			android:text="@string/status_bar_no_done" />
	</RadioGroup>
	<com.example.remotetreatment.view.listview.PullToRefreshListView
		android:id="@+id/refresh_layout"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<ListView
			android:id="@+id/list_view"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:divider="@null"
			android:cacheColorHint="@android:color/transparent"
			android:dividerHeight="0dip"
			android:fadingEdge="none"
			android:fastScrollEnabled="false"
			android:footerDividersEnabled="false"
			android:headerDividersEnabled="false"
			android:listSelector="@android:color/transparent"
			android:smoothScrollbar="true"
			android:scrollbars="none" />
	</com.example.remotetreatment.view.listview.PullToRefreshListView>
</LinearLayout>