<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/gray_dd">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">
		<include layout="@layout/com_page_header" />
		<com.example.remotetreatment.view.CalendarView
			android:id="@+id/calendar_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
		<LinearLayout
			android:id="@+id/layout_doctor"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dip"
			android:padding="10dip"
			android:orientation="horizontal"
			android:background="@color/white">
			<TextView
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:textColor="@color/gray_33"
				android:textSize="14sp"
				android:text="预约医生" />
			<TextView
				android:id="@+id/doctor_name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/gray_33"
				android:textSize="14sp"
				android:text="" />
		</LinearLayout>
		<ImageView
			android:layout_width="match_parent"
			android:layout_height="1px"
			android:background="@color/gray_d9" />
		<LinearLayout
			android:id="@+id/layout_user"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="10dip"
			android:orientation="horizontal"
			android:background="@color/white">
			<TextView
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:textColor="@color/gray_33"
				android:textSize="14sp"
				android:text="预约人信息" />
			<TextView
				android:id="@+id/user"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:drawableRight="@drawable/icon_arrow_right"
				android:drawablePadding="5dip"
				android:textColor="@color/gray_33"
				android:textSize="14sp"
				android:text="" />
		</LinearLayout>
		<ImageView
			android:layout_width="match_parent"
			android:layout_height="1px"
			android:background="@color/gray_d9" />
		<LinearLayout
			android:id="@+id/layout_reserve_time"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="10dip"
			android:orientation="horizontal"
			android:background="@color/white">
			<TextView
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:textColor="@color/gray_33"
				android:textSize="14sp"
				android:text="时间" />
			<TextView
				android:id="@+id/time"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/gray_33"
				android:textSize="14sp"
				android:text="" />
		</LinearLayout>
		<ImageView
			android:layout_width="match_parent"
			android:layout_height="1px"
			android:background="@color/gray_d9" />
		<LinearLayout
			android:id="@+id/layout_price"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="10dip"
			android:orientation="horizontal"
			android:background="@color/white">
			<TextView
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:textColor="@color/gray_33"
				android:textSize="14sp"
				android:text="总价" />
			<TextView
				android:id="@+id/fee"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/yellow"
				android:textSize="14sp"
				android:text="" />
		</LinearLayout>
		<TextView
			android:id="@+id/butn_commit"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dip"
			android:gravity="center"
			android:background="@color/gray_33"
			android:padding="10dip"
			android:textColor="@color/white"
			android:textSize="16sp"
			android:text="@string/butn_commit" />
	</LinearLayout>
	<RelativeLayout
		android:id="@+id/layout_times_dialog"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:visibility="invisible"
		android:background="@color/trans_black">
		<LinearLayout
			android:id="@+id/layout_dialog"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dip"
			android:layout_alignParentBottom="true"
			android:orientation="vertical">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/item_bg_top"
				android:gravity="center_vertical"
				android:paddingLeft="10dip"
				android:orientation="horizontal">
				<TextView
					android:id="@+id/reserve_date"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textColor="@color/gray_99"
					android:textSize="16sp"
					android:text="日期" />
				<TextView
					android:id="@+id/butn_confirm"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="10dip"
					android:gravity="center"
					android:textColor="@color/green"
					android:textSize="16sp"
					android:text="@string/butn_confirm" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/layout_times"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
			</LinearLayout>
			<TextView
				android:id="@+id/butn_cancel"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dip"
				android:background="@drawable/item_bg_one"
				android:gravity="center"
				android:textColor="@color/yellow"
				android:textSize="16sp"
				android:text="@string/butn_cancel" />
		</LinearLayout>
	</RelativeLayout>
</RelativeLayout>